# lab2-waahm7

task4/: driver.c  makefile  myexe  readme.txt
task5/: CMakeLists.txt
task5/man/: myadd.3
task5/src/: header.h
